# mopro-r0-example-app

./: .gitignore  Cargo.toml  README.md  rust-toolchain.toml
mopro-r0-example-app/: .gitignore  Cargo.toml  Config.toml
mopro-r0-example-app/flutter/: .gitignore  README.md  pubspec.yaml
mopro-r0-example-app/flutter/android/app/: build.gradle
mopro-r0-example-app/flutter/android/app/src/main/: AndroidManifest.xml
mopro-r0-example-app/flutter/integration_test/: plugin_integration_test.dart
mopro-r0-example-app/flutter/ios/Runner/: Info.plist
mopro-r0-example-app/flutter/lib/: main.dart
mopro-r0-example-app/flutter/mopro_flutter_plugin/android/: build.gradle
mopro-r0-example-app/flutter/mopro_flutter_plugin/android/src/main/kotlin/com/example/mopro_flutter/: MoproFlutterPlugin.kt
mopro-r0-example-app/flutter/mopro_flutter_plugin/android/src/main/kotlin/uniffi/mopro/: mopro.kt
mopro-r0-example-app/flutter/mopro_flutter_plugin/ios/: mopro_flutter.podspec
mopro-r0-example-app/flutter/mopro_flutter_plugin/ios/Classes/: MoproFlutterPlugin.swift  mopro.swift
mopro-r0-example-app/flutter/mopro_flutter_plugin/ios/MoproBindings.xcframework/: Info.plist
mopro-r0-example-app/flutter/mopro_flutter_plugin/ios/MoproBindings.xcframework/ios-arm64-simulator/Headers/mopro_r0_example_app/: module.modulemap  mopro_r0_example_appFFI.h
mopro-r0-example-app/flutter/mopro_flutter_plugin/lib/: mopro_flutter.dart  mopro_flutter_method_channel.dart  mopro_flutter_platform_interface.dart  mopro_types.dart
mopro-r0-example-app/flutter/mopro_flutter_plugin/test/: mopro_flutter_method_channel_test.dart  mopro_flutter_test.dart
mopro-r0-example-app/src/: lib.rs
risc0-circuit/: Cargo.toml
risc0-circuit/methods/guest/: Cargo.toml
risc0-circuit/src/: main.rs
