[workspace]
resolver = "2"
members = ["mopro-r0-example-app", "risc0-circuit"]
exclude = ["risc0-circuit/guest"]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
risc0-circuit = { path = "./risc0-circuit" }
risc0-build = { version = "3.0.3" }
risc0-zkvm = { version = "3.0.3", default-features = false }

[profile.dev]
opt-level = 3

[profile.release]
debug = 1
lto = true
